# kursorin2

./: .env.example  .gitignore  LICENSE  Makefile  README.md  benchmark.py  build_exe.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
benchmarks/: benchmark.py
docs/: LICENSES.md  architecture_guide.md  fix.md  status_report.md  technician_guide.md
kursorin/: __init__.py  __main__.py  app.py  cli.py  config.py  constants.py  exceptions.py  i18n.py
kursorin/core/: calibration_model.py  click_detector.py  cursor_controller.py  kursorin_engine.py
kursorin/fusion/: __init__.py  cursor_smoother.py  fusion_module.py
kursorin/trackers/: __init__.py  base_tracker.py  eye_tracker.py  hand_tracker.py  head_tracker.py  tracker_result.py
kursorin/tui/: __init__.py  app.py  app.tcss
kursorin/tui/screens/: __init__.py  dashboard.py  doctor.py  settings.py  update.py
kursorin/tui/widgets/: __init__.py  accuracy_meter.py  command_input.py  logo.py  status_indicator.py
kursorin/ui/: __init__.py  app_window.py  calibration_window.py  onboarding_wizard.py  overlay.py  settings_panel.py  theme.py
kursorin/utils/: __init__.py  camera_manager.py  logger.py  one_euro_filter.py  performance_monitor.py  platform_utils.py  resource_path.py  updater.py
tests/: conftest.py
tests/unit/: test_config.py  test_engine.py
